<resources>
    <string name="app_name">TipSplitCalculator</string>
    <string name="bill_total_including_tax">Bill Total - Including Tax:</string>
    <string name="tip_percent">Tip Percent:</string>
    <string name="tip_amount">Tip Amount:</string>
    <string name="total_with_tip">Total With Tip:</string>
    <string name="number_of_people">Number of People:</string>
    <string name="total_per_person">Total per Person:</string>
    <string name="clear">clear</string>
    <string name="go">go</string>
    <string name="_12">12%</string>
    <string name="_15">15%</string>
    <string name="_18">18%</string>
    <string name="_20">20%</string>
    <string name="total">Total $$$</string>
    <string name="enter_total_w_tax">Enter Total w/ Tax</string>
    <string name="of_people"># of People</string>
    <string name="this_is_tip_amount">This is tip amount</string>
    <string name="total_tip">Total + Tip</string>
</resources>